<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
   >

    <TextView
        android:id="@+id/kekTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/kekGreeeting"
        android:fontFamily="sans-serif"
        android:textColor="@color/Green"
        android:textSize="32sp"
        android:textStyle="normal|bold"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"></Space>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="182dp"
        android:src="@drawable/picha"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailEditText"
            android:text="@string/example_email_authorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Green"
            >

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:hint="@string/hint_for_password_editText"
            android:textSize="16sp"
            >

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/Green"
        android:fontFamily="@font/roboto"
        android:text="@string/authorization_button"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/signUpSuggestionTextView"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:text="@string/suggestion_to_sign_up"
        android:layout_gravity="center">

    </TextView>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </Space>
</LinearLayout>